--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ nav {
 }
 
 .site-nav {
-    
     display: flex;
     margin-left: 93px;
 
@@ -110,26 +109,15 @@ nav {
 
 /* меню мобільне */
 
-@media (max-width: 767px) {
-    .site-nav {
-      display: none;
+@media (max-width:480px) {
+    .site-nav.list {
+        display: none;
     }
-  }
-
-@media (max-width: 767px) {
-    .contact > li {
-      display: none;
+    .contact.list {
+        display: none;
     }
-  }
 
-  @media (min-width: 481px) {
-    .menu-open {
-      display: none;
-    }
-  }
-
-  .menu
-
+}
 
 
 
@@ -666,8 +654,8 @@ nav {
 }
 
 
+
 .name-card {
-    margin: auto;
     width: 264px;
     background-color: #fff;
     border-radius: 0px 0px 4px 4px;
@@ -678,13 +666,11 @@ nav {
 
 @media screen and (min-width: 768px) {
     .name {
-        gap: 24px;
-        columns: 2;
-    }
-
-    .name-card:nth-child(2n + 1) {
-            margin-bottom: 64px;
-        }
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: center;
+}
 }
 
 /* desktop screen */
@@ -695,7 +681,7 @@ nav {
         text-align: center;
         display: flex;
         justify-content: space-between;
-        gap: 30px;
+        
     }
     .name-card {
         
@@ -705,6 +691,7 @@ nav {
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 1px 1px rgba(0, 0, 0, 0.14),
             0px 2px 1px rgba(0, 0, 0, 0.2);
+            margin: 0;
     }
     
 }
@@ -817,24 +804,19 @@ nav {
 /* компанії */
 
 .custom {
-
-    columns: 2;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
     .custom {
-        columns: 3;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px;
+        justify-content: center;
     }
-
-    .customers-name {
-        width: 169px;
-        margin-right: 24px;
-    }
-    .customers-name:nth-child(2n + 1){
-        margin-bottom: 72px;
-    } 
-    
-
 }
 
 @media screen and (min-width: 1200px) {
@@ -844,22 +826,13 @@ nav {
     }
 }
 
-@media (max-width:480px) {
-    .customers-name{
-        margin-bottom: 72px;
-    }
-    
-    .customers-name:nth-child(3n) {
-        margin-bottom: 0;
-    }
-}
 
 
 
 
 
 .customers-link {
-    margin: auto;
+    
 
     display: flex;
     justify-content: center;
