--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,8 @@ p {
     */
 }
 
+
+
 /* tablet screen */
 @media screen and (min-width: 768px) {
     .container {
@@ -51,6 +53,10 @@ p {
 @media screen and (min-width: 1200px) {
     .container {
         max-width: 1158px;
+    }
+    .head {
+        display: flex;
+        align-items: center;
     }
 }
 
@@ -109,6 +115,7 @@ nav {
 
 /* меню мобільне */
 
+
 @media (max-width:480px) {
     .site-nav.list {
         display: none;
@@ -119,14 +126,27 @@ nav {
 
 }
 
-@media (min-width:1158px) {
-    .header-nav {
-        display: inline-flex;
+@media screen and (min-width:768px) {
+    .head {
+        display: flex;
+        align-items: center;
     }
     .contact.list {
-        display: inline-flex;
-        flex-direction: column;
+        display: flex;
+        flex-wrap: wrap;
         align-items: baseline;
+        flex-direction: column-reverse;
+}
+}
+
+@media screen and (min-width:1200px) {
+    .head {
+        display: flex;
+        align-items: center;
+    }
+    .contact.list {
+        display:flex;
+        flex-direction: row;
     }
 }
 
@@ -884,10 +904,7 @@ nav {
 
 /* підвал */
 
-.logo-footer {
-    display: inline-block;
-    margin-bottom: 20px;
-}
+
 
 .page-footer .container {
     display: flex;
@@ -898,8 +915,23 @@ nav {
 @media screen and (min-width:768px) {
     .page-footer.container {
         display: flex;
-        align-items: baseline;
+        flex-wrap: wrap;
+        justify-content: center;
     }
+
+    .footer-about {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        width: 264px;
+        margin-right: 24px;
+    }
+
+    .footer-social-text {
+        justify-content: flex-start;
+    }
+
+
 }
 
 @media screen and (min-width:1200px) {
@@ -956,8 +988,7 @@ nav {
 }
 
 
-@media screen and (min-width:768px) {
-
+@media screen and (min-width:768px) {   
 
 }
 
@@ -1061,7 +1092,16 @@ nav {
 }
 
 @media screen and (min-width:768px) {
+    .footer-submit {
+        display: block;
+        width: 453px;
+        
+    }
 
+    .footer-social-text {
+        text-align: center;
+        width: 75px;
+    }
 }
 
 @media screen and (min-width:1200px) {
@@ -1083,7 +1123,8 @@ nav {
 }
 
 @media screen and (min-width:768px) {
-
+    
+    
 }
 
 @media screen and (min-width:1200px) {
@@ -1131,6 +1172,12 @@ nav {
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media screen and (min-width:768) {
+    .footer-submit-btn {
+    }
+}
+
 
 .footer-submit-btn:hover, .footer-submit-btn:focus {
     background: #404BBF;
