--- a/css/style.css
+++ b/css/style.css
@@ -1100,7 +1100,6 @@ nav {
 
     .footer-social-text {
         text-align: center;
-        width: 75px;
     }
 }
 
@@ -1123,7 +1122,10 @@ nav {
 }
 
 @media screen and (min-width:768px) {
+    .signup-field {
     
+    flex-direction: column;
+    }
     
 }
 
