--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ p {
 
 
 /* tablet screen */
-@media screen and (max-width:480px) {
+@media screen and (min-width:480px) {
     .head {
         height: 70px;
         align-items: center;
@@ -355,7 +355,7 @@ nav {
     position: relative;
     display: block;
     padding-top: 32px;
-    padding-bottom: 32px;
+    padding-bottom: 22px;
         
     font-family: 'Roboto';
     font-style: normal;
@@ -532,7 +532,6 @@ nav {
 
 @media screen and (min-width: 768px) {
     .main-text {
-    width: 494px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
@@ -557,6 +556,11 @@ nav {
     font-weight: 600;
     font-size: 56px;
     line-height: 60px;
+    }
+
+    .main-inf {
+        padding-top: 188px;
+        padding-bottom: 188px;
     }
 }
 
@@ -828,36 +832,30 @@ nav {
     display: none;
 }
 
-@media screen and (max-width:480px) {
+
+   @media screen and (min-width:480px) {
     .main-list .item:not(:last-child){
         margin-bottom: 72px;
     }
+   }
 
-    .main-list {
-        width: 396px;
+  
+
+
+@media screen and (min-width:768px)  {
+    .main-list .item:nth-child(2n + 1) {
+            margin-bottom: 72px;
+        }
+
+    .main-list .item:nth-child(2n) {
+        margin-bottom: 0;
     }
-}
-
-@media screen and (max-width: 1158px) {
-.main-list .item:nth-child(2n + 1) {
-    margin-bottom: 72px;
-}
-}
-
-
-@media screen and (min-width:1200px) {
-
-    .main-list .item:not(:last-child) {
-     margin-right: 24px;
-   
-}
-
-.main-list .item:nth-child(2n + 1) {
-    margin-bottom: 72px;
-}
-
     
 }
+
+
+
+
 
 /* desktop screen */
 
@@ -876,6 +874,10 @@ nav {
         
     }
 
+    .main-list .item:nth-child(-n + 4) {
+        margin-bottom: 0;
+    }
+
 }
 
 .preority-icons {
@@ -886,13 +888,7 @@ nav {
 
 
 
-/* .main-list .item:not(:last-child) {
-    margin-right: 24px;
-}
 
-.main-list li {
-    width: calc((100% - 90px) / 4);
-} */
 
 
 
@@ -971,7 +967,7 @@ img {
 }
 
 
-@media (max-width: 480px) {
+@media (min-width: 480px) {
     .name-card:not(:last-child) {
         margin-bottom: 72px;
     }
@@ -993,10 +989,13 @@ img {
     .name {
     display: flex;
     flex-wrap: wrap;
-    row-gap: 64px;
     column-gap: 24px;
+    row-gap: 64px;
     justify-content: center;
-}
+    }
+    .name-card:nth-child(-n + 4) {
+        margin-bottom: 0;
+    }
 }
 
 /* desktop screen */
@@ -1011,7 +1010,7 @@ img {
     }
     .name-card {
         
-        width: calc((100% - 90px) / 4);
+        width: calc((100% - 72px) / 4);
         background-color: #fff;
         border-radius: 0px 0px 4px 4px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -1110,7 +1109,7 @@ img {
 
 .company-list {
     display: flex;
-    justify-content: space-between;
+    gap: 24px;
 }
 
 .title {
@@ -1343,7 +1342,7 @@ img {
     margin-bottom: 6px;
 }
 
-@media (max-width:480px) {
+@media (min-width:480px) {
     .footer-about {
         width: 268px;
         margin-bottom: 72px;
@@ -1365,7 +1364,7 @@ img {
     color: #E7E9FC;
 }
 
-@media screen and (max-width:480px) {
+@media screen and (min-width:480px) {
     .logo-footer {
         margin-bottom: 16px;
     }
@@ -1670,6 +1669,11 @@ img {
 
 .section {
     padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.company-h.section {
+    padding-top: 96px;
     padding-bottom: 128px;
 }
 
@@ -1680,12 +1684,20 @@ img {
         padding-top: 96px;
         padding-bottom: 96px;
     }
+    .company-h.section {
+        padding-top: 96px;
+        padding-bottom: 104px;
+    }
 }
 
 /* desktop screen */
 
 @media screen and (min-width: 1200px) {
     .section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    .company-h.section {
         padding-top: 120px;
         padding-bottom: 120px;
     }
