--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,7 @@ nav {
 
 @media screen and (min-width: 768px) {
     .main-text {
+    width: 496px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
